# orbita2d_control

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lint_and_test.yml  python.yml  rust.yml
kinematics/src/: lib.rs
orbita2d_c_api/: .coverage  Cargo.toml  Python API example.ipynb  README.md  build.rs  orbita2d.h  package.xml  pyproject.toml
orbita2d_c_api/python/: API_example.ipynb  README.md
orbita2d_c_api/python/orbita2d/: __init__.py
orbita2d_c_api/python/tests/: __init__.py  test_controller.py  test_kinematics.py  test_multiple_controller.py
orbita2d_c_api/src/: controller.rs  kinematics.rs  lib.rs
orbita2d_controller/: Cargo.toml  README.md
orbita2d_controller/config/: dxl_poulpe2d.yaml  ethercat_poulpe.yaml  fake.yaml  flipsky.yaml  left_elbow_flipsky.yaml  left_shoulder_flipsky.yaml  left_shoulder_poulpe.yaml  test_input.csv
orbita2d_controller/examples/: poulpe2d.rs  poulpe2d_test.rs  read_pos.rs  sinus.rs  test_move.rs
orbita2d_controller/scripts/: generate_input_data.ipynb  plot_csv.py
orbita2d_controller/src/: coherency.rs  fake_motor.rs  flipsky_serial.rs  lib.rs  poulpe.rs  poulpe_ethercat.rs  serial.rs
orbita2d_description/: CMakeLists.txt  README.md  package.xml
orbita2d_description/config/: fake.yaml  fake_shoulder.yaml  left_elbow_flipsky_2.yaml  left_shoulder_flipsky_2.yaml  right_elbow_flipsky_2.yaml  right_shoulder_flipsky_2.yaml  test.rviz  test_controllers.yaml
orbita2d_description/launch/: display.launch.py  test.launch.py
orbita2d_description/ros2_control/: orbita2d.ros2_control.xacro  orbita2d_actuator_control.ros2_control.xacro  orbita2d_axis_control.ros2_control.xacro  orbita2d_raw_motor_control.ros2_control.xacro
orbita2d_description/urdf/: orbita2d.urdf.xacro  test_orbita2d.urdf.xacro
orbita2d_kinematics/: Cargo.toml  README.md
orbita2d_kinematics/src/: lib.rs  torque.rs  velocity.rs
orbita2d_serial_controller/: Cargo.toml
orbita2d_serial_controller/examples/: read_pos.rs  sinus.rs
orbita2d_serial_controller/src/: lib.rs
orbita2d_system_hwi/: CMakeLists.txt  orbita2d_system_hwi.xml  package.xml
orbita2d_system_hwi/include/orbita2d_system_hwi/: orbita2d_system_hwi.hpp
orbita2d_system_hwi/src/: orbita2d_system_hwi.cpp
tests-hardware/: Cargo.toml
tests-hardware/notebooks/: trajectory-monitor.ipynb
tests-hardware/src/: main.rs
tests-hardware/tests/: test_torque.rs  test_torque_limit.rs  test_velocity.rs
