[package]
name = "orbita2d_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
once_cell = "1.18.0"
orbita2d_controller = { version = "0.1.0", path = "../orbita2d_controller" }
orbita2d_kinematics = { version = "0.1.0", path = "../orbita2d_kinematics" }
motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch = "31-orbita2d-compatibility" }
env_logger = "0.10.0"
log = "0.4"

[build-dependencies]
cbindgen = "0.24.5"

[lib]
# Make sure to march the package name, otherwise colcon cargo gets confused
name = "orbita2d_c_api"
crate-type = ["staticlib", "cdylib"]
