[package]
name = "tests-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
orbita2d_kinematics = { version = "0.1.0", path = "../orbita2d_kinematics" }
orbita2d_controller = { version = "0.1.0", path = "../orbita2d_controller" }
cache_cache = "0.1.0"
rustypot = "0.4.1"
serialport = "4.2.1"
clap = "4.3.8"
rand = "0.8.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.9.0"
